--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 spring.application.name=ecom-application
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.user=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.user=sa
+#spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecomdb
+spring.datasource.user=embarkx
+spring.datasource.password=embarkx
+spring.jpa.database=POSTGRESQL
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 ####################### ACTUATOR CONFIG OPTIONS #######################
