Added fix for application.properties database config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.h2.console.enabled=true
 #spring.datasource.password=
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecomdb
-spring.datasource.user=embarkx
+spring.datasource.username=embarkx
 spring.datasource.password=embarkx
 spring.jpa.database=POSTGRESQL
 
